--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "fastify": "^4.26.1"
+    "@fastify/autoload": "^5.8.0",
+    "bcryptjs": "^2.4.3",
+    "fastify": "^4.26.1",
+    "mongoose": "^8.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
@@ -20,7 +23,7 @@
     "@typescript-eslint/parser": "^7.1.0",
     "eslint": "^8.56.0",
     "prettier": "^3.0.3",
-    "typescript": "^5.3.3",
-    "tsx": "^4.7.1"
+    "tsx": "^4.7.1",
+    "typescript": "^5.3.3"
   }
 }
