--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,10 +4,11 @@
   "main": "index.js",
   "type": "module",
   "license": "MIT",
-  "scripts": {
+  "private": true,
+    "scripts": {
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
-    "watch": "tsx watch src",
+    "dev": "tsx watch ./src",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
   },
@@ -24,6 +25,7 @@
     "eslint": "^8.56.0",
     "prettier": "^3.0.3",
     "tsx": "^4.7.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "maritime-dict-contracts": "*"
   }
 }
