--- a/turbo.json
+++ b/turbo.json
@@ -2,8 +2,7 @@
     "$schema": "https://turbo.build/schema.json",
     "pipeline": {
       "dev": {
-        "cache": false,
-        "persistent": true
+        "cache": false
       }
     }
   }
