--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@fastify/autoload": "^5.8.0",
     "@fastify/cors": "^9.0.1",
+    "ajv": "^8.12.0",
     "bcryptjs": "^2.4.3",
     "fastify": "^4.26.1",
     "mongoose": "^8.2.0"
@@ -24,7 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
     "eslint": "^8.56.0",
-    "maritime-dict-contracts": "*",
+    "maritime-contracts": "*",
     "prettier": "^3.0.3",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
