--- a/apps/cabinet/package.json
+++ b/apps/cabinet/package.json
@@ -19,6 +19,7 @@
     "vuestic-ui": "^1.9.2"
   },
   "devDependencies": {
+    "maritime-contracts": "*",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
