--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
 "version": "1.0.0.",
 "private": true,
 "scripts": {
-  "dev": "turbo dev"
-  },
+  "dev": "turbo dev",
+  "format": "prettier --write \"**/*.{ts,vue,js}\""
+},
 "workspaces": [
   "apps/*",
   "packages/*"
 ],
   "devDependencies": {
+    "prettier": "^3.2.5",
     "turbo": "1.12.4"
   }
 }
