--- a/turbo.json
+++ b/turbo.json
@@ -1,8 +1,9 @@
 {
     "$schema": "https://turbo.build/schema.json",
-    "pipeline": {
+    "tasks": {
       "dev": {
-        "cache": false
+        "cache": false,
+        "persistent": true
       }
     }
-  }
+}
