--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,5 +1,6 @@
 {
     "name": "maritime-contracts",
     "version": "1.0.2",
-    "types": "index.d.ts"
+    "main": "./index.d.ts",
+    "types": "./index.d.ts"
 }
